@startuml NEA
skinparam classAttributeIconSize 0
skinparam classFontSize 16
skinparam classFontName Trebuchet MS
skinparam classBackgroundColor #F0F0F0
skinparam classBorderColor #585858
skinparam classArrowColor #585858
skinparam wrapWidth 400
skinparam RoundCorner 0
skinparam DefaultFontName Trebuchet MS
skinparam DefaultFontSize 16
skinparam ClassFontSize 16
skinparam TitleFontSize 20
skinparam ClassAttributeFontSize 12
skinparam Dpi 300
skinparam svgAntiAlias true
skinparam Linetype ortho
skinparam Nodesep 50
skinparam ranksep 50

left to right direction

title Controllers

namespace Controllers {
    class AuthController
    class ChessController
    class MessageController
    class StatisticController
}

Controllers.AuthController o-- Services.IAuthenticationService
Controllers.AuthController o-- Classes.Data.IUserRepository
Controllers.AuthController o-- Services.UserService

Controllers.ChessController o-- Services.ChessService
Controllers.ChessController o-- Services.UserService
Controllers.ChessController o-- Classes.Utilities.GeneratorUtilities

Controllers.MessageController o-- Classes.Data.IMessageRepository
Controllers.MessageController o-- Classes.Data.IUserRepository
Controllers.MessageController o-- Services.UserService
Controllers.MessageController o-- Services.IAuthenticationService

Controllers.StatisticController o-- Classes.Data.IStatisticsRepository
Controllers.StatisticController o-- Classes.Data.IUserRepository
Controllers.StatisticController o-- Services.UserService
Controllers.StatisticController o-- Services.IAuthenticationService

hide members
@enduml